# Capstone_Project

./: .env  .gitignore  Data_Cleaning_Last.ipynb  README.md  app.py  arya_test.ipynb  correlation_matrix_ADA-USD.csv  correlation_matrix_AVAX-USD.csv  correlation_matrix_BTC-USD.csv  correlation_matrix_COMP-USD.csv  correlation_matrix_ETH-USD.csv  correlation_matrix_LINK-USD.csv  correlation_matrix_LTC-USD.csv  correlation_matrix_MATIC-USD.csv  correlation_matrix_SOL-USD.csv  correlation_matrix_UNI-USD.csv  data_preparation_and_modeling.ipynb  extract_coinbase.py  justin_models.ipynb  justin_test.ipynb  pyproject.toml  test.ipynb
Cleaned_Data/: cleaned_crypto_updated_module5.csv  forecast_vs_actual.csv  test_weekago_cleaned.csv
DELETE/: arya_test.ipynb  justin_models.ipynb
RAW_Data/: BTC_historical.csv  all_historical.csv  all_historical_first_six_mths.csv  all_historical_six_months.csv  combined_subreddit_data.csv  main_data.csv  test_weekago_updt_717.csv  train_historic_updt_717.csv  updated_data_715.csv
app_plots/: streamlit_plts.py
env/: pyvenv.cfg
extract_reddit_data/: extract_reddit_data.py
forecast_metrics/: XGBoost_Model_ADA-USD.xlsx  XGBoost_Model_AVAX-USD.xlsx  XGBoost_Model_BTC-USD.xlsx  XGBoost_Model_COMP-USD.xlsx  XGBoost_Model_ETH-USD.xlsx  XGBoost_Model_LINK-USD.xlsx  XGBoost_Model_LTC-USD.xlsx  XGBoost_Model_MATIC-USD.xlsx  XGBoost_Model_SOL-USD.xlsx  XGBoost_Model_UNI-USD.xlsx
historic_api_pulls/: extract_coinbase.py
main_ds_notebooks/: WHITEPAPER.md  data_preparation_and_modeling.ipynb
utils/: mysql_conn.py  mysql_objects.py
(+27 files in other folders)
