[tool.poetry]
name = "capstone-project"
version = "0.1.0"
description = ""
authors = ["Justin Farnan <77633929+justinm329@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "2.2.2"
pyarrow = "16.0.0"
numpy = "1.26"
scikit-learn = "1.4.2"
requests = "^2.32.3"
pytz = "^2024.1"
python-dotenv = "^1.0.1"
mysql-connector-python = "^9.0.0"
sqlalchemy = "^2.0.31"
notebook = "^7.2.1"
ipykernel = "^6.29.5"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
plotly = "^5.22.0"
statsmodels = "^0.14.2"
ipywidgets = "^8.1.3"
dash = "^2.17.1"
streamlit = "^1.36.0"
ta = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
